# osm_easy_api

./: .coveragerc  .gitignore  API.txt  CHANGELOG.md  README.md  install_test_depediences.bat  main.py  pyproject.toml  run_tests.bat  run_tests_api.bat  run_tests_data_classes.bat  run_tests_diff.bat  run_tests_utils.bat  setup.cfg  test-requirements.txt  tox.ini
.github/: FUNDING.yml
.github/workflows/: docs.yaml  tests.yaml
src/: __init__.py
src/api/: _URLs.py  __init__.py  api.py  exceptions.py
src/api/endpoints/: __init__.py  changeset.py  changeset_discussion.py  elements.py  gpx.py  misc.py  notes.py  user.py
src/data_classes/: OsmChange.py  __init__.py  changeset.py  node.py  note.py  osm_object_primitive.py  relation.py  tags.py  user.py  way.py
src/diff/: diff.py  diff_parser.py
src/osm_easy_api/: __init__.py
src/osm_easy_api/api/: _URLs.py  __init__.py  api.py  exceptions.py
src/osm_easy_api/api/endpoints/: __init__.py  changeset.py  changeset_discussion.py  elements.py  gpx.py  misc.py  notes.py  user.py
src/osm_easy_api/data_classes/: GpxFile.py  OsmChange.py  __init__.py  changeset.py  node.py  note.py  osm_object_primitive.py  relation.py  user.py  way.py
src/osm_easy_api/diff/: __init__.py  diff.py  diff_parser.py
src/osm_easy_api/utils/: __init__.py  element_to_osm_object.py  join_url.py
src/utils/: __init__.py  write_gzip_to_file.py
tests/api/: test_api.py  test_api_changeset.py  test_api_changeset_discussion.py  test_api_elements.py  test_api_gpx.py  test_api_misc.py  test_api_notes.py  test_api_user.py
tests/data_classes/: test_changeset.py  test_gpxFile.py  test_node.py  test_note.py  test_osmChange.py  test_osmObjectPrimitive.py  test_relation.py  test_tags.py  test_user.py  test_way.py
tests/diff/: test_diff.py  test_diff_parser.py
tests/fixtures/: OsmChange.osc  compare_files.py  default_variables.py  gps_points.gpx  hour.xml  sample_dataclasses.py
tests/fixtures/stubs/: changeset_stub.py  note_stub.py
tests/utils/: test_join_url.py  test_write_gzip_to_file.py
