[metadata]
name = osm_easy_api
description = Python package for parsing osm diffs and communicating with the osm api.

platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: python :: 3
    Programming Language :: python :: 3 :: Only
    Programming Language :: python :: 3.11

[options]
packages = osm_easy_api
install_requires = requests>=2
python_requires = >= 3.11
package_dir = =src
zip_safe = no