[metadata]
name = osm_easy_api
description = Python package for parsing osm diffs and communicating with the osm api.

platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: python :: 3
    Programming Language :: python :: 3 :: Only
    Programming Language :: python :: 3.10
    Programming Language :: python :: 3.11

[options]
packages = find:
install_requires = requests>=2
python_requires = >= 3.10
package_dir = =src
zip_safe = no

[options.packages.find]
where = src

[options.extras_require]
testing = 
    tox >= 4.4.0
    responses >= 0.22.0
    python-dotenv >= 1.0.0
    coverage >= 7.2.0

[options.package_data]
osm_easy_api = py.typed