[metadata]
name = osm_easy_api
version = attr: osm_easy_api.VERSION
description = Python package for parsing osm diffs and communicating with the osm api.
long_description = file: README.md, CHANGELOG.md, LICENSE.md
long_description_content_type = text/markdown
keywords = openstreetmap, osm, api, wrapper, diff
license = GPLv3
url = https://github.com/docentYT/osm_easy_api

platforms = unix, linux, osx, win32
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: English
    Topic :: Scientific/Engineering :: GIS

    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires = requests>=2
python_requires = >= 3.10
package_dir = =src
zip_safe = no

[options.packages.find]
where = src

[options.extras_require]
testing = 
    tox >= 4.4.0
    responses >= 0.22.0
    coverage >= 7.2.0
    coverage-badge >= 1.1.0

[options.package_data]
osm_easy_api = py.typed